[package]
name = "tracing-texray"
description = "Tracing layer to view a plaintext timeline of spans and events"
version = "0.2.0"
edition = "2024"
authors = ["russell.r.cohen@gmail.com"]
license = "MIT"
repository = "https://github.com/rcoh/tracing-texray"
rust-version = "1.85.0"

[dependencies]
tracing-subscriber = "0.3.23"
tracing = "0.1.44"
terminal_size = "0.4.4"
parking_lot = "0.12.5"

[dev-dependencies]
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tokio = { version = "1", features = ["full"]}
proptest = "1.11.0"
env_logger = "0.11.10"
loom = "0.7.2"

[target.'cfg(loom)'.dependencies]
loom = "0.7.2"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loom)'] }

[profile.release]
debug = 1